--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
-
+@import "custom.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,4 +14,7 @@
 
 body {
   background-color: #000000;
+}
+
+.scale125 {
 }
